Date		Added
======
2007/10/31
	* Rev. 11628 Fixed reward option in Arena giving potato. [L0ne_W0lf]
	* Rev. 11626 Added Turbo Track point exchanger to arena. [L0ne_W0lf]
	* Slightly optimized the existing Arena point exchanger.
	* Added Izlude Battle Arena. Please test it and report any bug you find out. [SinSloth]
	- Level 50/60/70/80 and Party arenas are accessable.
	- Updated old warps to official.
	- Acolyte-only arena will be added a bit later.
	- Arena Points can be obtained by completing arenas as well as exchanging your Turbo Track points.
	* Removed useless WIP folder whose quests have been there for a while. [SinSloth]
2007/10/30
	* Fixed a possible exploit in Thanatos Tower quest. [SinSloth]
	- Thanatos can only be summoned every 2 hours, no matter how you get there.
	* Update some missing warps in Veins City [Samuray22]
	-All credit fo to $ephiroth.
2007/10/29
	* Fixed Gaebolg quest not giving exp in some situations [Playtester]
2007/10/28
	* Rev. 11605 Updated NPC headers to fix errors caused by rev. 11603. [L0ne_W0lf]
	- Note: non-standard loaded scripts need to be checked for errors/duplicates.
	* Updated Veins Field spawn amounts to official [Playtester]
	* Added Rekenber Job quest which was missing for some unknown reason. [SinSloth]
	* Rev. 11595 Updated Bio Ethics quest to official, and re-added. [L0ne_W0lf]
2007/10/27
	* Rev. 11590 Small update to divorce NPC. [L0ne_W0lf] 
2007/10/25
	* Rev. 11577 More minor updates to a couple NPCs. [L0ne_W0lf]
	* Rev. 11576 Minor updates the Juperos Elevator NPCs. [L0ne_W0lf]
	* Rev. 11574 Minor fixes here and there to a few scripts. [L0ne_W0lf]
2007/10/24
	* Rev. 11570 Added the Advanced Refiner for Enriched ores. [L0ne_W0lf]
	- I've had this done for awhile now, but I've never submitted it. XD
2007/10/23
	* Rev. 11568 Removed duplicate Morroc city npc (bugreport:277) [L0ne_W0lf]
	- Fix to the knight job quest. (bad areawarp destination)